--- a/newcss.css
+++ b/newcss.css
@@ -1,184 +1,79 @@
-html {
-	margin: 0;
-	padding: 0;
-	}
-body { 
-	font: 75% georgia, sans-serif;
-	line-height: 1.88889;
-	color: #555753; 
-	background: #fff url(blossoms.jpg) no-repeat 
-bottom right; 
-	margin: 0; 
-	padding: 0;
-	}
-p { 
-	margin-top: 0; 
-	text-align: justify;
-	}
-h3 { 
-	font: italic normal 1.4em georgia, sans-serif;
-	letter-spacing: 1px; 
-	margin-bottom: 0; 
-	color: #7D775C;
-	}
-a:link { 
-	font-weight: bold; 
-	text-decoration: none; 
-	color: #B7A5DF;
-	}
-a:visited { 
-	font-weight: bold; 
-	text-decoration: none; 
-	color: #D4CDDC;
-	}
-a:hover, a:focus, a:active { 
-	text-decoration: underline; 
-	color: #9685BA;
-	}
-abbr {
-	border-bottom: none;
-	}
-
-
-/* specific divs */
-.page-wrapper { 
-	background: url(zen-bg.jpg) no-repeat top left; 
-	padding: 0 175px 0 110px;  
-	margin: 0; 
-	position: relative;
-	}
-
-.intro { 
-	min-width: 470px;
-	width: 100%;
-	}
-
-header h1 { 
-	background: transparent url(h1.gif) no-repeat top left;
-	margin-top: 10px;
-	display: block;
-	width: 219px;
-	height: 87px;
-	float: left;
-
-	text-indent: 100%;
-	white-space: nowrap;
-	overflow: hidden;
-	}
-header h2 { 
-	background: transparent url(h2.gif) no-repeat top left; 
-	margin-top: 58px; 
-	margin-bottom: 40px; 
-	width: 200px; 
-	height: 18px; 
-	float: right;
-
-	text-indent: 100%;
-	white-space: nowrap;
-	overflow: hidden;
-	}
-header {
-	padding-top: 20px;
-	height: 87px;
+:link, :visited { background-color: transparent; color: #9296A2; font-weight: bold; text-decoration: underline }
+:link:hover, :visited:hover { background-color: #9296A2; color: #373B46; text-decoration: none }
+body { font: normal 70% Verdana, Georgia, Times, serif }
+body {
+	color: #000000;
+	margin: 0em;
+	padding: 0em;
+	background-color: #330202;
 }
-
-.summary {
-	clear: both; 
-	margin: 20px 20px 20px 10px; 
-	width: 160px; 
-	float: left;
-	}
-.summary p {
-	font: italic 1.1em/2.2 georgia; 
-	text-align: center;
-	}
-
-.preamble {
-	clear: right; 
-	padding: 0px 10px 0 10px;
-	}
-.supporting {	
-	padding-left: 10px; 
-	margin-bottom: 40px;
-	}
-
-footer { 
-	text-align: center; 
-	}
-footer a:link, footer a:visited { 
-	margin-right: 20px; 
-	}
-
-.sidebar {
-	margin-left: 600px; 
-	position: absolute; 
-	top: 0; 
-	right: 0;
-	}
-.sidebar .wrapper { 
-	font: 10px verdana, sans-serif; 
-	background: transparent url(paper-bg.jpg) top left repeat-y; 
-	padding: 10px; 
-	margin-top: 150px; 
-	width: 130px; 
-	}
-.sidebar h3.select { 
-	background: transparent url(h3.gif) no-repeat top left; 
-	margin: 10px 0 5px 0; 
-	width: 97px; 
-	height: 16px; 
-
-	text-indent: 100%;
-	white-space: nowrap;
-	overflow: hidden;
-	}
-.sidebar h3.archives { 
-	background: transparent url(h5.gif) no-repeat top left; 
-	margin: 25px 0 5px 0; 
-	width:57px; 
-	height: 14px; 
-
-	text-indent: 100%;
-	white-space: nowrap;
-	overflow: hidden;
-	}
-.sidebar h3.resources { 
-	background: transparent url(h6.gif) no-repeat top left; 
-	margin: 25px 0 5px 0; 
-	width:63px; 
-	height: 10px; 
-
-	text-indent: 100%;
-	white-space: nowrap;
-	overflow: hidden;
-	}
-
-
-.sidebar ul {
-	margin: 0;
-	padding: 0;
-	}
-.sidebar li {
-	line-height: 1.3em; 
-	background: transparent url(cr1.gif) no-repeat top center; 
-	display: block; 
-	padding-top: 5px; 
-	margin-bottom: 5px;
-	list-style-type: none;
-	}
-.sidebar li a:link {
-	color: #988F5E;
-	}
-.sidebar li a:visited {
-	color: #B3AE94;
-	}
-
-
-.extra1 {
-	background: transparent url(cr2.gif) top left no-repeat; 
-	position: absolute; 
-	top: 40px; 
-	right: 0; 
-	width: 148px; 
-	height: 110px;
-	}
+h1, h2, h3, h4 { margin: 0em; overflow: hidden; padding: 0em }
+h1 { background: #9296A2 url(h1_v2.jpg) no-repeat; height: 325px}
+* > h2 { position: fixed }
+h3 span { }
+p { color: #9296A2; margin: 0em; padding: 0em 0em 1em 0em }
+p:hover { color: #E7E7F1 }
+p * { color: #9296A2 }
+p:hover * { }
+ul { background-color: transparent; color: #FFFFFF; margin: 0em; padding: 0em; padding-bottom: 20px }
+ul li { list-style: square; margin: 0em 0em 0em 2em; padding: 0em }
+ul li a { font-weight: normal }
+#container {
+	border: 2px solid #000;
+	border-width: 0px 2px;
+	color: #E7E7F1;
+	margin-left: -321px;
+	padding-bottom: 20px;
+	position: absolute;
+	left: 50%;
+	width: 642px;
+	background-color: #130101;
+}
+#pageHeader {
+	background-color: #373B46;
+	text-align: right;
+}
+#pageHeader h1 span { }
+#pageHeader h2 span { margin-left: -2000px }
+#preamble h3 { height: 60px; width: 330px }
+#preamble {
+	margin-left: 270px;
+	margin-right: 24px;
+	width: auto;
+}
+#supportingText {
+	margin-left: 24px;
+	width: auto;
+	margin-right: 24px;
+}
+p { margin-left: 10px; padding-left: 10px; text-align: justify }
+#explanation h3 {
+	height: 30px;
+	width: 330px;
+	padding-top: 20px;
+}
+#participation h3 {
+	height: 30px;
+	width: 330px;
+	padding-top: 20px;
+}
+#benefits h3 {
+	height: 30px;
+	width: 330px;
+	padding-top: 20px;
+}
+#linkList {
+	left: 40px;
+	position: absolute;
+	top: 340px;
+	width: 220px;
+	border-right: 1px solid #fff;
+}
+#linkList h3 { height: 30px; width: 200px }
+#footer {
+	bottom: 400px;
+	position: static;
+	right: 36px;
+	text-align: right;
+	padding-top: 40px;
+}
