--- a/wstyle.css
+++ b/wstyle.css
@@ -1,24 +1,15 @@
-/* css Zen Garden default style v1.02 */
-/* css released under Creative Commons License - http://creativecommons.org/licenses/by-nc-sa/1.0/  */
-
-/* This file based on 'Tranquille' by Dave Shea */
-/* You may use this file as a foundation for any new work, but you may find it easier to start from scratch. */
-/* Not all elements are defined in this file, so you'll most likely want to refer to the xhtml as well. */
-
-/* Your images should be linked as if the CSS file sits in the same folder as the images. ie. no paths. */
-
-
-/* basic elements */
 html {
 	margin: 0;
 	padding: 0;
-	}
+}
+
 body { 
 	font: 75% georgia, sans-serif;
 	line-height: 1.88889;
 	color: #555753; 
 	background: #fff url(webbg.png); 
 	background-size: cover;
+	background-attachment: fixed;
 	margin: 0; 
 	padding: 0;
 	}
@@ -202,16 +193,20 @@ footer a:link, footer a:visited {
 	margin-top: 50px;
 	padding: 5px;
 	height: 400px;
+	position: fixed;
 }
 
 #content {
 	float: left;
 	width: 700px;
-	margin-left: 10px;
+	margin-left: 285px;
 	margin-top: 50px;
 	background-color: #700000;
-	margin-left: 30px;
 	padding: 10px;
 
+}
+
+.navlinks {
+	margin-left: 5px;
 }
 	
