--- a/wstyle.css
+++ b/wstyle.css
@@ -21,8 +21,7 @@ p {
 
 h3 { 
 	font: italic normal 1.4em georgia, sans-serif;
-	letter-spacing: 1px; 
-	margin-bottom: 2px; 
+	margin-bottom: 0.2em; 
 	color: #cccc00;
 }
 
@@ -43,49 +42,35 @@ a:hover, a:focus, a:active {
 	color: #9685BA;
 }
 
-.preamble {
-	clear: right; 
-	padding: 0px 10px 0 10px;
-}
-
-footer { 
-	text-align: center; 
-}
-
-footer a:link, footer a:visited { 
-	margin-right: 20px; 
-}
-
 #menu {
 	background-color: #700000;
 	color: white;
 	float: left;
-	width: 205px;
-	margin-left: 30px;
-	margin-top: 50px;
-	padding: 5px;
-	height: 400px;
+	width: 16.8em;
+	margin-left: 2.3em;
+	margin-top: 3em;
+	padding: 0.5em;
+	height: 30em;
 	position: fixed;
 }
 
 #content {
 	float: left;
-	width: 700px;
-	margin-left: 285px;
-	margin-top: 50px;
+	width: 60em;
+	margin-left: 23em;
+	margin-top: 3em;
 	background-color: #700000;
-	padding: 10px;
-	margin-bottom: 20px;
+	padding: 1.5em;
+	margin-bottom: 2em;
 	color: white;
 }
 
 .navlinks {
-	margin-left: 5px;
+	margin-left: 0.2em;
 }
 
 #welcome {
 	color: #cccc00;
 	font-size: large;
 	font: italic normal 1.4em georgia, sans-serif;
-	letter-spacing: 1px; 
 }
